# github_actions_gtest_example

./: .gitignore  CMakeLists.txt  README.md  license
.github/workflows/: debug.yml  release.yml
include/github_actions_gtest_example/: github_actions_gtest_example.h
src/: CMakeLists.txt  github_actions_gtest_example.cpp  info.cpp
test/: AllTests.cpp  CMakeLists.txt  github_actions_gtest_exampleTest.cpp
